fixed the layering issue of the delete button using z-index

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ li {
   position: relative;
   border: 5px solid transparent;
   border-radius: 5px;
+  z-index: 0;
 }
 
 .other::before {
@@ -64,6 +65,7 @@ li {
     violet 60px,
     violet 70px
   ) 1;
+  z-index: -1;
 }
 
 img {
@@ -82,6 +84,8 @@ img {
   margin: 1rem auto;
   cursor: pointer;
   font-weight: bold;
+  z-index: 1;
+  position: relative;
 }
 
 form {
